--- a/todo.html
+++ b/todo.html
@@ -8,7 +8,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/5f59ca6ad3.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="https://github.com/Archana-Patukuri/todo-web-application/blob/508697aab6c6686738352e375abdced09ea239e8/todo.css"/>
-	<script src="todo.js"></script>
+	<script src="https://github.com/Archana-Patukuri/todo-web-application/blob/5f321d8856ca323ae7388d326fb762dbefd7fa50/todo.js"></script>
 </head>
 
 <body>
